Tests/CarlTests/CompilerTests/negative/missing-colon.carl
automaton Test {
    world { dimension 2 }
    rules {}
}
